CHANGELOG
=========

#### [2.1.0] ####
 * [44f3b33] po files update prior to 2.1 release                                           (Daniel Henrique Barboza)
 * [d4812f7] Fix error messages IDs                                                         (Rodrigo Trujillo)
 * [22d0510] Fixing debug report error message in sosreport_collection                      (Daniel Henrique Barboza)
 * [418db60] Issue #48 - Do not allow empty name on debug report update                     (Lucio Correia)
 * [8e91ec6] Enable support to user:password in HTTPS yum repo url                          (Rodrigo Trujillo)
 * [10d4ec5] Issue #853: Add vgs, lvs and pvs missing functions to disks.py                 (Jose Ricardo Ziviani)
 * [a1f8560] Add message error field in repository edit window                              (Rodrigo Trujillo)
 * [31d3973] Improve user request log messages                                              (Lucio Correia)

#### [2.1.0-rc1] ####
 * [87fc0e7] Adding svg pictures to IBM blacklist                                           (Daniel Henrique Barboza)
 * [2eb0297] Added Gingerbase new SVG logo for login page, footer and about window          (Samuel Guimarães)
 * [1d97430] Customize User Request Log messages                                            (Lucio Correia)
 * [0ff1cba] Fixing copyright dates                                                         (Daniel Henrique Barboza)
 * [2914575] Update pkg-version script to work with submodules                              (Aline Manera)
 * [eca3523] Return Ginger Base version in /config API instead of Wok version               (Aline Manera)
 * [47e5286] Remove websockets port information from Ginger Base                            (Aline Manera)
 * [9c4cfcd] Changes for gingerbase to fix the Issue# 28 in Wok.                            (Atreyee Mukhopadhyay)
 * [f4f49c1] Fixed Debug reports UI issues                                                  (Rajat Gupta)