@@ -3,7 +3,7 @@ Version: @PACKAGE_VERSION@
 Section: base
 Priority: optional
 Architecture: all
-Depends: wok,
+Depends: wok (>= 2.1.0),
          python-apt,
          python-cherrypy3,
          python-configobj,
